# OperaBot

./: ARCHITECTURE.md  AUDIT-REPORT.md  CLAUDE.md  DESIGN_SYSTEM.md  KANBAN-ROADMAP.md  PROJECT_SUMMARY.md  README.md  SETUP.md  debug_db.py  docker-compose.yml  test_chat_debug2.py
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt  reset_db.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0000_initial.py  0001_add_chat_message_sources.py  0002_add_tickets.py  0003_add_user_status.py  0003_ticket_archive.py  0004_add_super_admin_role.py  0005_add_ticket_notes_and_resolution.py  0006_add_document_file_path.py
backend/app/: __init__.py  config.py  main.py  middleware.py
backend/app/api/: dependencies.py  limiter.py
backend/app/api/routes/: admin.py  auth.py  chat.py  documents.py  faq.py  tickets.py  users.py
backend/app/api/schemas/: analytics.py  auth.py  chat.py  document.py  faq.py  ticket.py  user.py
backend/app/db/: database.py
backend/app/models/: __init__.py  chat_message.py  company.py  document.py  faq.py  ticket.py  user.py
backend/app/services/: auth_service.py  document_service.py  llm_client.py  qdrant_service.py
backend/app/utils/: logging.py  security.py
backend/scripts/: create_test_users.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_flow.py  test_chat_flow.py  test_documents.py  test_faq_endpoints.py  test_tickets.py
backend/tests/unit/: test_auth_service.py  test_intent_classification.py  test_llm_client.py  test_llm_providers.py
(+109 files in other folders)
